# model-based-artificial-intelligence

./: .gitignore
exercises/: EA-5.2-NQueens.mzn  EA-5.3-EdgeColouring.mzn  EA-5.6-Cards.mzn
src/: CMakeLists.txt  main  main.cpp
src/state_exploration/: FIFOFrontier.cpp  FIFOFrontier.h  LIFOFrontier.cpp  LIFOFrontier.h  PriorityFrontier.cpp  PriorityFrontier.h  action.h  frontier.h  node.cpp  node.h  problem.h  search_state_explorer.cpp  search_state_explorer.h  state.cpp  state.h
src/state_exploration/examples/: RomaniaAction.h  RomaniaProblem.cpp  RomaniaProblem.h
